test/fail/integration/_fail_grammar_actarg_1.hs
x :: Int -> Int
x y = y
z :: Int
z = 't45
main = print "hello"
